# stream

./: .gitignore  README.md
app/: package-lock.json  package.json
app/src/: app.css  app.html
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src/lib/: api.ts  types.ts
app/src/lib/components/: ArticleRow.svelte  FeedPanel.svelte  SettingsModal.svelte  TopBar.svelte  TopPanel.svelte
app/src/lib/stores/: articles.ts  settings.ts  tags.ts
app/src/routes/: +layout.svelte  +page.svelte
backend/: .env.example  .gitignore  Dockerfile  docker-compose.yml  nginx.conf  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_title_hash.py  b2c3d4e5f6a7_add_config.py  e6079f42ed05_initial_tables.py
backend/src/: config.py  db.py  models.py  seed.py
backend/src/api/: main.py  websocket.py
backend/src/api/routes/: articles.py  config.py  sources.py  tags.py
backend/src/services/: config_store.py  paywall.py  redis_pubsub.py  tag_matcher.py
backend/src/workers/: main.py  pipeline.py  ranker.py
backend/src/workers/agents/: newsapi.py  rss.py  scraper.py
backend/tests/: conftest.py  test_api_articles.py  test_api_sources.py  test_api_tags.py  test_integration.py  test_models.py  test_newsapi_agent.py  test_paywall.py  test_pipeline.py  test_ranker.py  test_redis_pubsub.py  test_rss_agent.py  test_scraper_agent.py  test_tag_matcher.py  test_websocket.py
docs/superpowers/plans/: 2026-04-10-stream-backend.md  2026-04-10-stream-tauri-app.md
docs/superpowers/specs/: 2026-04-10-stream-news-terminal-design.md
